some basic html, no functionality yet
Removed some boilerplate styling, added some simple html for structure of to do list

--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -1,9 +1,10 @@
 @use '../../core/styles/functions.scss' as *;
 
 .home {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+
     // height: calc(100vh - $nav-height);
     width: 100vw;
     overflow: hidden;
