--- a/src/core/styles/global.scss
+++ b/src/core/styles/global.scss
@@ -7,7 +7,7 @@
   position: relative;
   max-width: 100%;
   max-height: 100%;
-  
+
 }
 
 body {
@@ -16,24 +16,16 @@ body {
   width: 100vw;
 }
 
-button {
-  border: 2px solid $secondary-color;
-  background-color: transparent;
-  color: $secondary-color;
-  border-radius: 1.5rem;
-  height: 3rem;
-  padding: 0 1.5rem;
-}
+button {}
 
 
 ul {
-  li {
-    margin-left: 1rem;
-  }
-  
+  li {}
+
 }
+
 img {
   width: 100%;
-    height: 100%;
-    object-fit: cover;
+  height: 100%;
+  object-fit: cover;
 }
