--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -11,3 +11,4 @@
 
 @use "../components/Navigation/Navigation.scss";
 @use "../components/Todo/Todo.scss";
+@use "../components/TodoList/TodoList.scss";
