--- a/src/core/styles/vars.scss
+++ b/src/core/styles/vars.scss
@@ -7,8 +7,8 @@ $xlarge: toRem(1440);
 
 $nav-height: toRem(88);
 
-$primary-color: #000000;
-$secondary-color: #FFFFFF;
+$primaryColor: #000000;
+$secondaryColor: #FFFFFF;
 //#868686, #363636, #111111, #A0A0A0, #9E9E9E, #F5F5F5, #D0BCFF, #A2FC9B, #FE6B6B 
 
 $Primary: 'Inter';
