--- a/src/core/styles/global.scss
+++ b/src/core/styles/global.scss
@@ -1,31 +1,21 @@
 @use './functions.scss' as *;
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  position: relative;
-  max-width: 100%;
-  max-height: 100%;
-
+.visuallyHidden {
+    clip: rect(1px, 1px, 1px, 1px);
+    height: 1px;
+    overflow: hidden;
+    position: absolute !important;
+    white-space: nowrap;
+    width: 1px;
 }
 
 body {
-  background: $primary-color;
-  color: $secondary-color;
-  width: 100vw;
-}
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: $secondaryColor;
+    background-color: $primaryColor;
 
-button {}
-
-
-ul {
-  li {}
-
-}
-
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
