--- a/src/core/styles/global.scss
+++ b/src/core/styles/global.scss
@@ -1,5 +1,9 @@
 @use './functions.scss' as *;
 
+* {
+  box-sizing: border-box;
+}
+
 .visuallyHidden {
     clip: rect(1px, 1px, 1px, 1px);
     height: 1px;
@@ -19,3 +23,23 @@ body {
     background-color: $primaryColor;
 
 }
+
+// .btn {
+//     background-color: $secondaryColor;
+//     color: $primaryColor;
+//     border: none;
+//     padding: 10px 20px;
+//     border-radius: 4px;
+//     cursor: pointer;
+//     font-size: 1rem;
+//     font-weight: 500;
+//     margin: 0 0.5rem;
+
+//     &:hover {
+//     }
+
+//     &:focus {
+//         outline: none;
+//         box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.2);
+//     }
+// }
