--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -5,7 +5,21 @@
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
     overflow: hidden;
     padding-top: $nav-height;
+    overflow: visible;
+
+    header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    @media (max-width: 600px) {
+        padding-top: 0;
+    }
 }
